--- a/startbootstrap-template/index.html
+++ b/startbootstrap-template/index.html
@@ -25,7 +25,8 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">We're Coming Back Soon</h1>
                     <p class="mb-5">We're working hard to finish the development of this site, stay tuned!</p>
-                    <p class="mb-5" href="https://greenberry.ie/" >Greenberry.ie</p>
+                    <a class="mb-5" href="https://greenberry.ie/">Bernard@Greenberry.ie</a>
+        
                         
                 </div>
             </div>
