--- a/startbootstrap-template/index.html
+++ b/startbootstrap-template/index.html
@@ -25,7 +25,7 @@
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">We're Coming Back Soon</h1>
                     <p class="mb-5">We're working hard to finish the development of this site, stay tuned!</p>
-                    <a class="mb-5" href="https://greenberry.ie/">Bernard@Greenberry.ie</a>
+                    <p class="mb-5"><a href="https://greenberry.ie/">Bernard@Greenberry.ie</a></p>
         
                         
                 </div>
@@ -33,6 +33,7 @@
         </div>
         <!-- Social Icons-->
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
+        <!--
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
@@ -40,6 +41,7 @@
                 <a class="btn btn-dark m-3" href="#!"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
+        -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
